Avalara Fullqa/src/CloudCraze/objects/E_PriceModifier__c.object
<CustomObject>
    <description>Price Modifier</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CartTotalAmount__c</fullName>
        <label>Cart Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiscountType__c</fullName>
        <description>The type of discount this price modifer uses.  This is a value that can be found in the DiscountType custom settings.</description>
        <label>DiscountType</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceModifierID__c</fullName>
        <externalId>true</externalId>
        <label>Price Modifier Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CC Price Modifier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Amount__c</columns>
        <columns>CartTotalAmount__c</columns>
        <columns>DiscountType__c</columns>
        <columns>PriceModifierID__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>PriceModifierID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Price Modifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>